# autoshop

./: .env-template  .gitignore  .pre-commit-config.yaml  BookSlot.ipynb  FoodGetter.ipynb  Groceries.ipynb  README.md  Utility.ipynb  auto_shop.py  pyproject.toml  requirements.txt  run_tests.ps1  setup.ps1
autoshop/: __init__.py  chrome.py  environment.py  google.py  selenium.py  tesco.py
autoshop/chrome/: __init__.py  chrome.py
autoshop/environment/: __init__.py  environment.py
autoshop/google/: __init__.py  google.py
autoshop/selenium/: __init__.py  selenium.py
autoshop/tesco/: __init__.py  tesco.py
autoshop/unit/: __init__.py  unit.py
autoshop/util/: __init__.py  logging.py  typing.py
notebooks/: BookSlot.ipynb  DeleteCookies.md  FoodGetter.ipynb  Groceries.ipynb  MainShop.ipynb
tests/test_chrome/: test_chrome.py
tests/test_environment/: test_environment.py
tests/test_google/: test_google.py
tests/test_selenium/: test_selenium.py
tests/test_tesco/: test_tesco.py
tests/test_unit/: test_unit.py
tests/test_util/: test_logging.py  test_typing.py
