[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autoshop"
authors = [
    {name = "Josie"},
]
description = "Python package to help with grocery shopping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromedriver-binary-auto==0.3.1",
    "undetected-chromedriver==3.5.3",
    "selenium==4.12.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pandas==2.1.1",
    "pyarrow==13.0.0",
    "pygsheets==2.0.6",
    "pint==0.22",
    "jupyterlab==4.0.6",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "autoshop",
    "pytest==7.4.2",
]

[tool.setuptools]
packages = ["autoshop"]
