[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autoshop"
authors = [
    {name = "Josie"},
]
description = "Python package to help with grocery shopping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromedriver-binary-auto==0.3.1",
    "undetected-chromedriver==3.5.5",
    "selenium==4.18.1",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pandas==2.2.1",
    "pyarrow==15.0.0",
    "pygsheets==2.0.6",
    "pint==0.22",
    "jupyterlab==4.1.2",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "autoshop",
    "pytest==8.0.1",
]

[tool.setuptools]
packages = ["autoshop"]
